; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/eicon/extr_message.c_add_ai.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/eicon/extr_message.c_add_ai.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32* }

@.str = private unnamed_addr constant [5 x i8] c"ssss\00", align 1
@KEY = common dso_local global i32 0, align 4
@UUI = common dso_local global i32 0, align 4
@FTY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_6__*)* @add_ai to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_ai(i32* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [5 x %struct.TYPE_6__], align 16
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %4, align 8
  store i32 0, i32* %5, align 4
  br label %7

7:                                                ; preds = %15, %2
  %8 = load i32, i32* %5, align 4
  %9 = icmp slt i32 %8, 5
  br i1 %9, label %10, label %18

10:                                               ; preds = %7
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds [5 x %struct.TYPE_6__], [5 x %struct.TYPE_6__]* %6, i64 0, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  store i64 0, i64* %14, align 16
  br label %15

15:                                               ; preds = %10
  %16 = load i32, i32* %5, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %5, align 4
  br label %7

18:                                               ; preds = %7
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %18
  br label %50

24:                                               ; preds = %18
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 1
  %27 = load i32*, i32** %26, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 1
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = trunc i64 %31 to i32
  %33 = getelementptr inbounds [5 x %struct.TYPE_6__], [5 x %struct.TYPE_6__]* %6, i64 0, i64 0
  %34 = call i64 @api_parse(i32* %28, i32 %32, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), %struct.TYPE_6__* %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %24
  br label %50

37:                                               ; preds = %24
  %38 = load i32*, i32** %3, align 8
  %39 = load i32, i32* @KEY, align 4
  %40 = getelementptr inbounds [5 x %struct.TYPE_6__], [5 x %struct.TYPE_6__]* %6, i64 0, i64 1
  %41 = call i32 @add_s(i32* %38, i32 %39, %struct.TYPE_6__* %40)
  %42 = load i32*, i32** %3, align 8
  %43 = load i32, i32* @UUI, align 4
  %44 = getelementptr inbounds [5 x %struct.TYPE_6__], [5 x %struct.TYPE_6__]* %6, i64 0, i64 2
  %45 = call i32 @add_s(i32* %42, i32 %43, %struct.TYPE_6__* %44)
  %46 = load i32*, i32** %3, align 8
  %47 = load i32, i32* @FTY, align 4
  %48 = getelementptr inbounds [5 x %struct.TYPE_6__], [5 x %struct.TYPE_6__]* %6, i64 0, i64 3
  %49 = call i32 @add_ss(i32* %46, i32 %47, %struct.TYPE_6__* %48)
  br label %50

50:                                               ; preds = %37, %36, %23
  ret void
}

declare dso_local i64 @api_parse(i32*, i32, i8*, %struct.TYPE_6__*) #1

declare dso_local i32 @add_s(i32*, i32, %struct.TYPE_6__*) #1

declare dso_local i32 @add_ss(i32*, i32, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
